src/test/resources/typeerrors/MockIntCharMismatch.java
public class MockIntCharMismatch {
    int test = 'x';
}